2008-02-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/gdb-ui.el (gdb-output-sink): Define with an invalid value.
	(gdb): Initialize it here instead.

	* files.el (locate-dominating-file): Fix thinko in last change.
	Reported by Bruce Stephens <bruce.stephens@isode.com>.

2008-02-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-mode-menu): New menu for vc-status.

2008-02-18  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/verilog-mode.el (customize): Fix typo in error message.
	(verilog-mode, verilog-mode-indent, verilog-mode-actions)
	(verilog-mode-auto, verilog-indent-level-module)
	(verilog-minimum-comment-distance, verilog-library-flags)
	(verilog-library-directories, verilog-library-files)
	(verilog-auto-reset-widths, verilog-imenu-generic-expression)
	(verilog-xemacs-menu, verilog-set-compile-command)
	(verilog-set-compile-command, verilog-mode-syntax-table, verilog-mode)
	(verilog-get-expr, verilog-strip-comments, verilog-one-line)
	(verilog-lint-off, verilog-batch-auto, verilog-batch-delete-auto)
	(verilog-batch-inject-auto, verilog-batch-indent)
	(verilog-continued-line, verilog-type-keywords)
	(verilog-read-sub-decls-sig, verilog-read-sub-decls-line)
	(verilog-read-inst-pins, verilog-read-arg-pins)
	(verilog-read-auto-template, verilog-read-signals, verilog-getopt-file)
	(verilog-add-list-unique, verilog-symbol-detick, verilog-modi-filename)
	(verilog-auto-star, verilog-auto-inst, verilog-auto-wire)
	(verilog-enum-ascii, verilog-sk-begin, verilog-sk-fork)
	(verilog-sk-datadef, verilog-colorize-include-files-buffer)
	(verilog-mode-version, verilog-mode-release-date)
	(verilog-mode-release-emacs, verilog-linter, verilog-coverage)
	(verilog-simulator, verilog-compiler)
	(verilog-auto-sense-defines-constant, verilog-company)
	(verilog-project, verilog-mark-defun, verilog-submit-bug-report):
	Fix typos in docstrings.
	(verilog-set-auto-endcomments, verilog-calculate-indent)